完成发送邮件case

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,11 @@ mybatis.configuration.map-underscore-to-camel-case=true
 #logging.level.top.tswinter.nowcoder_community=debug
 #logging.file.name=D:\\codes\\inst\\other\\nowcoder-logs\\test.log
 #logging.charset.file=utf-8
+
+# mail
+spring.mail.host=smtp.163.com
+spring.mail.port=465
+spring.mail.username=fy981b@163.com
+spring.mail.password=FGEOKXBJWCSSRYSW
+spring.mail.protocol=smtps
+spring.mail.properties.mail.smtp.ssl.enable=true
