完成生成验证码

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,6 @@ spring.mail.username=fy981b@163.com
 spring.mail.password=FGEOKXBJWCSSRYSW
 spring.mail.protocol=smtps
 spring.mail.properties.mail.smtp.ssl.enable=true
+
+# diy
+community.path.domain=http://localhost
