完成过滤敏感词

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,5 @@ spring.mail.properties.mail.smtp.ssl.enable=true
 
 # diy
 community.path.domain=http://localhost
+community.path.upload=D:/codes/inst/other/nowcoder-upload
+
